flex wrap fix

--- a/globals.css
+++ b/globals.css
@@ -13,7 +13,7 @@
 }
 
 .stack-tag{
-  @apply bg-secondary-100 mr-2 lg:mr-0 lg:ml-2 dark:bg-gray-700 text-gray-700 dark:text-gray-200 text-sm rounded px-2 py-1 cursor-pointer;
+  @apply bg-secondary-100 mr-2 lg:mr-0 mb-1 lg:ml-2 dark:bg-gray-700 text-gray-700 dark:text-gray-200 text-sm rounded px-1 py-0 cursor-pointer font-light;
 }
 .stack-no-ml{
   @apply lg:ml-0 mr-2;
